Fix a visibility issue.

--- a/frontend/src/styles/empire.css
+++ b/frontend/src/styles/empire.css
@@ -139,7 +139,7 @@ h2 {
 }
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
 
 .link:hover {
